@@ -1,5 +1,6 @@
 - drop HTML::Entities::Interpolate
 - stop mutating tree object with "record" stuff
+- stop destroying the tree on DESTROY
 
 2.50 2020-10-11
 - zap pointless logger attribute
